--- a/style.css
+++ b/style.css
@@ -3,14 +3,14 @@
 }
 
 html {
-    scroll-behavior: smooth; 
+    scroll-behavior: smooth;
 }
 
 body {
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 24px;
     min-height: 100vh;
-    margin: 0; 
+    margin: 0;
     padding: 0;
     display: flex;
     flex-direction: column;
@@ -18,12 +18,16 @@ body {
 }
 
 .container {
-    max-width: 1080px;
+    max-width: 1120px;
+    padding: 0 20px;
     margin: 0 auto;
 }
 
-.nav-list {
+.header {
     background-color: rgb(230, 104, 46);
+}
+
+.nav-list {
     list-style: none;
     display: flex;
     justify-content: space-around;
@@ -44,11 +48,14 @@ body {
 
 .avatar {
     width: 300px;
-    
 }
 
 h1 {
     font-size: 36px;
+}
+
+.code-example {
+    white-space: pre;
 }
 
 .contacts-list {
@@ -68,10 +75,11 @@ h1 {
     text-decoration: none;
 }
 
-
+.footer {
+    background-color: rgb(230, 104, 46);
+}
 
 .footer-list {
-    background-color: rgb(230, 104, 46);
     list-style: none;
     display: flex;
     justify-content: space-around;
